# mbwilding

./: COMBINED-RESUME-TEMPLATE.md  Cargo.toml  README.md  RESUME-TEMPLATE.md  RESUME.md  TEMPLATE.md  readme.md  resume.md
.github/actions/github-tiles/: action.yml
.github/workflows/: generate.yml  github-tiles.yml  stats.yml  template.yml
.templates/: README.md  RESUME.md
about/: resume.md
src/: icons.rs  main.rs  svg.rs  theme.rs
src/github/: mod.rs  types.rs
src/tiles/: contributions.rs  languages.rs  mod.rs  statistics.rs
