[package]
name = "github-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
oxvg_ast = { version = "0.0.5", features = ["roxmltree"] }
oxvg_optimiser = "0.0.5"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"         # Optimize for size.
lto = true              # Enable Link Time Optimization.
codegen-units = 1       # Reduce the number of codegen units to enhance optimization.
strip = true            # Remove symbol information for a smaller binary.
panic = "abort"         # Aborts on panic, reducing the binary size.
incremental = false     # Disable incremental compilation.
overflow-checks = false # Disable overflow checks if not required (unsafe).

[profile.dev.package."*"]
opt-level = 2

[profile.ci]
inherits = "dev"
opt-level = 0
codegen-units = 16
lto = false
incremental = true
strip = false
panic = "unwind"
debug = false
overflow-checks = false
