[package]
name = "github-tiles"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
oxvg_ast = { version = "0.0", features = ["roxmltree"] }
oxvg_optimiser = "0.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
incremental = false
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2
